Fixed all integration testcases